--- a/presentations/leeds.qmd
+++ b/presentations/leeds.qmd
@@ -5,7 +5,7 @@ format:
   revealjs:
     css: styles.css
     toc: true
-    toc-depth: 2
+    toc-depth: 1
     slideNumber: true
     auto: true
 execute:
@@ -15,15 +15,17 @@ jupyter: lead_map
 ---
 
 ## Testing kids in Leeds for lead
+- We collected a lot of **demographic**, **socioeconomic**, and **environmental** data the MSOA level for England.
 
-- What do we know about kids in Leeds?
-- What do we know about risk factors in Leeds?
+- Using this data, we want to identify high-risk areas for lead exposure for children in Leeds.
+  - What do we know about kids in Leeds?
+  - What do we know about risk factors in Leeds?
 
-# Data
+# Data Overview
 ## Introduction to MSOAs
 - Middle Layer Super Output Areas are geographic units within local authority districts used for detailed data reporting.
 - Each MSOA includes 2,000–6,000 households or 5,000–15,000 people.
-- MSOA analysis allows for detailed exploration of **demographic**, **socioeconomic**, and **environmental** data, enabling insights at a granular level rather than viewing Leeds as a single unit.
+- MSOA analysis allows for detailed exploration at a granular level, rather than viewing Leeds as a single unit.
 - Leeds contains a total of 107 MSOAs
 
 ## UK MSOA data
@@ -44,7 +46,6 @@ We believe that a combination of them can give a good indication of lead exposur
 #| label: imports
 #| echo: false
 #| cache: false
-
 
 from plotting_functions import *
 
@@ -69,18 +70,19 @@ fig.update_layout(title_text="Distribution of kids in Leeds")
 fig.show()
 ```
 
-## Location of children by age
+## Location of children under 5 years
 
-- If we look at the distribution of kids under 5 years, the distribution is similar to the overall distribution of kids
-  
 ```{python}
 #| label: kids-u5-location
 #| echo: false
 
 fig = plot_chloropleth("total_ppl_u5_totalpop_prop_2011", merged, "Leeds")
-fig.update_layout(title_text="Proportion of population under 5 years old in Leeds")
 fig.show()
 ```
+
+
+- If we look at the distribution of kids under 5 years, the distribution is similar to the overall distribution of kids
+  
 
 ## Location of families by age of parents
 
@@ -103,49 +105,49 @@ fig.show()
 
 ## Housing age variables
 
-We use the UK Stock of properties data to obtain the following variables:
+We use the UK Stock of properties data to obtain the proportion of houses built in various intervals. We focus on the following variables:
 
-- Proportion of Houses Built 1930-1939
-- Proportion of Houses Built 1945-1954
-- Proportion of Houses Built 1955-1964
-- Proportion of Houses Built before 1992 
+- Proportion of houses built before 1992
+- Proportion of houses built before 1972
+- Proportion of houses built before 1954
 
-
-## Proportion of houses built before lead paint ban
+## Proportion of houses built before 1992
 
 ```{python}
 #| label: housing-pre-1992-location
 #| echo: false
 
 fig = plot_chloropleth("bp_pre_1992_prop", merged, "Leeds")
-fig.update_layout(title_text="Distribution of houses before lead paint was banned")
 fig.show()
 ```
 
-## Housing age
+- These were built before a legal ban on lead paint
+
+## Proportion of houses built before 1954
 
 ```{python}
-#| label: housing-age-comparison
-#| echo: false
-
-plot_histograms("build_year_median", merged, "Leeds", "UK", n_bins=16)
-fig.update_layout(title_text="Leeds has older housing relative to the UK")
-fig.show()
-```
-
-## Location of very old housing stock
-```{python}
-#| label: housing-age-location
+#| label: housing-pre-1954-location
 #| echo: false
 
 fig = plot_chloropleth("bp_pre_1954_prop", merged, "Leeds")
-fig.update_layout(title_text="Distribution of older housing in Leeds")
 fig.show()
 ```
 
-## Location of house prices
-- House prices are highest in the north
-- Median house prices 2017-2021 have tripled since 1995-2000
+- These are likely to have at least some lead paint
+
+## Proportion of houses built before 1939
+
+```{python}
+#| label: housing-pre-1939-location
+#| echo: false
+
+fig = plot_chloropleth("bp_pre_1939_prop", merged, "Leeds")
+fig.show()
+```
+
+- These are almost guaranteed to have lead paint
+
+## Distribution of (median) house prices
 
 ```{python}
 #| label: house-prices-location
@@ -155,6 +157,9 @@ fig = plot_chloropleth("house_price_mean_median_2017to2021", merged, "Leeds")
 fig.update_layout(title_text="Distribution of house prices in Leeds")
 fig.show()
 ```
+
+- House prices are highest in the north
+- Median house prices 2017-2021 have tripled since 1995-2000
 
 # Risk factors: Employment
 
@@ -180,7 +185,6 @@ We use the UK 2011 Census to investigate the following jobs and its impact on le
 #| echo: false
 
 plot_chloropleth("unemployed_16to74_ppl_prop_2011", merged, "Leeds")
-fig.update_layout(title="Proportion of unemployed people in Leeds")
 fig.show()
 ```
 
@@ -207,24 +211,19 @@ The variables used are:
 
 ## Single Parent Incidence
 
-Single parents rely on a single income and this limits access to safer housing, often resulting in older homes with potential for lead paint.
+- Single parents rely on a single income and this limits access to safer housing, often resulting in older homes with potential for lead paint.
 
-Single parents may have less time to monitor lead hazards at home 
+- Single parents may have less time to monitor lead hazards at home 
 
-We obtain the following variables from the UK 2011 census as part of our investigation:
+- We focus on the **proportion of single parent families** from the UK 2011 census
 
-- Proportion of single parent families
-- Proportion of single fathers
-- Proportion of single mothers
-
-## Location of single parents
+## Location of single parents families
 
 ```{python}
 #| label: single-parents-location
 #| echo: false
 
 fig = plot_chloropleth("lone_parent_fam_w_kids_prop_2011", merged, "Leeds")
-fig.update_layout(title="Proportion of single parent families in Leeds")
 fig.show()
 ```
 
@@ -249,7 +248,6 @@ fig.show()
 #| echo: false
 
 fig = plot_CDFs("poverty_rateE", merged, "Leeds")
-fig.update_layout(title="Leeds has higher poverty rate relative to the UK")
 fig.show()
 ```
 - Poverty rates in Leeds have a heavier tail then the UK
@@ -260,24 +258,23 @@ fig.show()
 #| echo: false
 
 fig = plot_chloropleth("poverty_rateE", merged, "Leeds")
-fig.update_layout(title="The center of Leeds is poorest")
 fig.show()
 ```
 
-- Poverty rates are increasing towards the center
+- Poverty rates are highest towards the center
 
 ## Minority population
+
 - (Wheeler et al. , 2021) find that African Americans face a higher risk of deprivation and lead poisoning in Maryland. 
 - While the structural system in the US differs, as a comparatively poorer population it may well be an at-risk group in the UK.
 
-## Minorities and poverty
+## Correlation of black population and poverty
 
 ```{python}
 #| label: black-poverty-correlation
 #| echo: false
 
 fig = plot_pairs(["black_ppl_prop_2011", "poverty_rateE"], merged, "Leeds")
-fig.update_layout(title="Correlation between black population and poverty rate")
 fig.show()
 ```
 
@@ -288,7 +285,6 @@ fig.show()
 #| echo: false
 
 fig = plot_chloropleth("black_ppl_prop_2011", merged, "Leeds")
-fig.update_layout(title="Distribution of black population in Leeds")
 fig.show()
 
 ```
@@ -367,7 +363,6 @@ fig.show()
 #| echo: false
 
 fig = plot_chloropleth("soil_lead_mean", merged, "Leeds")
-fig.update_layout(title="Soil lead concentration in Leeds")
 fig.show()
 ```
 
