--- a/presentations/leeds.qmd
+++ b/presentations/leeds.qmd
@@ -110,6 +110,9 @@ fig.show()
 ## Housing age variables
 
 We use the UK Stock of properties data to obtain the proportion of houses built in various intervals. We focus on the following variables:
+- Proportion of Houses Built 1930-1939
+- Proportion of Houses Built 1945-1954
+- Proportion of Houses Built 1955-1964
 
 - Proportion of houses built before 1992
 - Proportion of houses built before 1972
@@ -180,26 +183,16 @@ We use the UK 2011 Census to investigate the following jobs and its impact on le
 - Proportion Working in Construction 
 - Proportion Working in Machinery and Plants
 
-<!-- perhaps plot -->
-
 
 ## Unemployment and economic inactivity 
 
 - Higher rates of unemployment and economic inactivity are often found in lower-income areas
 - Residents may have fewer housing options and are likelier to live in older, potentially lead-contaminated buildings.
 
-## Unemployment rate
+We have the following variables from the UK 2011 census:
 
-<!-- todo: renders wrong plot?! -->
-
-```{python}
-#| label: unemployment-location
-#| echo: false
-
-plot_chloropleth("unemployed_16to74_ppl_prop_2011", merged, "Leeds")
-fig.show()
-```
-
+- Proportion of unemployed (by gender)
+- Proportion of economically inactive (by gender)
 # Risk factors: Deprivation
 
 ## Why Deprivation
@@ -285,6 +278,11 @@ fig.show()
 - (Wheeler et al. , 2021) find that African Americans face a higher risk of deprivation and lead poisoning in Maryland. 
 - While the structural system in the US differs, as a comparatively poorer population it may well be an at-risk group in the UK.
 
+From the UK 2011 Census we consider the following groups:
+-	Proportion of Black People
+-	Proportion of White People
+- Proportion of Immigrants (todo: check in what form we have this!)
+
 ## Correlation of black population and poverty
 
 ```{python}
@@ -314,6 +312,13 @@ fig.show()
 - Parental education level directly impacts socioeconomic status, affecting housing options and access to resources
 
 - Higher educational attainment may be linked to greater awareness of lead exposure risks, making parents likelier to avoid high risk environments.
+
+Using the UK 2011 census we analyse:
+
+- Proportion of parents with level 1 qualifications
+- Proportion of parents with level 2 qualifications
+- Proportion of parents with level 3 qualifications
+- Proportion of parents with level 4 qualifications
 
 ## Location of educated parents
 
